--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <div id="sidenav">
   <ul>
 	<li>
@@ -18,87 +20,76 @@
   </ul>		
 </div>
 <div id="items">
-  <h1>Used Equipment</h1>
-  <div>
-	
-	<a href="#"><img src="images/usedplace.png" alt="Used equipment placeholder img"/><h2>Heathkit SB-104A</h2></a>
-	<p>We have many Heathkit manuals available.  Some are original manuals, others are copies.  Go to this page to check out our manual prices.</p>
-	
-  </div>
   
+  {% if categories.USED_EQUIPMENT %}
+  <h1>Used Equipment</h1>
+  {% for unit in categories.USED_EQUIPMENT %} 
   <div>
-	<a href="#"><img src="images/usedplace.png" alt="Used equipment placeholder img"/><h2>Heathkit SB-104A</h2></a>
-	<p>We have many Heathkit manuals available.  Some are original manuals, others are copies.  Go to this page to check out our manual prices.</p>
-	
+	<a href="{{ unit.url }}">
+      <img src="{{ unit.image.thumbnail.url|default:"/static/images/usedplace.png" }}"
+           alt="{{ unit.image.alt_text|default:"" }}"/>
+      <h2>{{ unit.title }}</h2>
+    </a>
+	<p>{{ unit.description|truncatewords:30 }}</p>
   </div>
+  {% endfor %}
+  {% endif %}
+  
+  {% if categories.MANUALS %}
   <h1>Manuals</h1>
+  {% for manual in categories.MANUALS %}
   <div>
-	<a href="#"><a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/><h2>Parts &amp; Accessories</h2></a>
-	  <p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
-	  
+    <a href="{{ manual.url }}">
+      <img src="{{ manual.image.thumbnail.url|default:"/static/images/manualplace.png" }}"
+           alt="{{ manual.image.alt_text|default:"" }}"/>
+      <h2>{{ manual.title }}</h2>
+    </a>
+	<p>{{ manual.description|truncatewords:30 }}</p>	  
   </div>
-  <div>
-	<a href="#"><a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/><h2>Parts &amp; Accessories</h2></a>
-	  <p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
-	  
-  </div>
-  <div>
-	<a href="#"><a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/><h2>Parts &amp; Accessories</h2></a>
-	  <p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
-	  
-  </div>
-  <div>
-	<a href="#"><a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/><h2>Parts &amp; Accessories</h2></a>
-	  <p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
-	  
-  </div>
+  {% endfor %}
+  {% endif %}
+  
+  {% if categories.PARTS %}
   <h1>Parts</h1>
+  {% for part in categories.PARTS %}
   <div>
-	<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
+	<a href="{{ part.url }}">
+      <img src="{{ part.image.thumbnail.url|default:"/static/images/partplace.png" }}"
+           alt="{{ part.image.alt_text|default:"" }}"/>
+      <h2>{{ part.title }}</h2>
+    </a>
+	<p>{{ part.description|truncatewords:30 }}</p>
   </div>
-  <div>
-	<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
-  </div>
-  <div>
-	<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
-  </div>
-  <div>
-	<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
-  </div>
+  {% endfor %}
+  {% endif %}
+
+  {% if categories.ACCESSORIES %}
   <h1>Accessories</h1>
+  {% for accessory in categories.ACCESSORIES %}
   <div>
-	<a href="#"><img src="images/accessoryplace.png" alt="Accessory placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
+	<a href="{{ accessory.url }}">
+      <img src="{{ accessory.image.thumbnail.url|default:"/static/images/accessoryplace.png" }}"
+           alt="{{ accessory.image.alt_text|default:"" }}"/>
+      <h2>{{ accessory.title }}</h2>
+    </a>
+	<p>{{ accessory.description|truncatewords:30 }}</p>
   </div>
-  <div>
-	<a href="#"><img src="images/accessoryplace.png" alt="Accessory placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
-  </div>
+  {% endfor %}
+  {% endif %}
+
+  {% if categories.REPAIRS %}
   <h1>Repairs</h1>
+  {% for repair in categories.REPAIRS %}
   <div>
-	<a href="#"><img src="images/repairplace.png" alt="Repair placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
+	<a href="{{ repair.url }}">
+      <img src="{{ repair.image.thumbnail.url|default:"/static/images/repairplace.png" }}"
+           alt="{{ repair.image.alt_text|default:"" }}"/>
+      <h2>{{ repair.title }}</h2>
+    </a>
+	<p>{{ repair.description|truncatewords:30 }}</p>	
   </div>
-  <div>
-	<a href="#"><img src="images/repairplace.png" alt="Repair placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
-  </div>
-  <div>
-	<a href="#"><img src="images/repairplace.png" alt="Repair placeholder img"/><h2>Repairs</h2></a>
-	<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
-	
-  </div>
+  {% endfor %}
+  {% endif %}
   
 </div>
+{% endblock content %}
