Updated a bad image path.

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="error">
   <h1>404-Error Page Not Found</h1>
-  <img src="images/404.png" alt="RTO Electronics logo" />
+  <img src="/static/images/404.png" alt="RTO Electronics logo" />
   <p>This is not the page you're looking for...and we're sorry about that! Help us out by contacting us if you got here via a broken link. Thanks, and have a Great Day!</p> 
   <script type="text/javascript">
 	var GOOG_FIXURL_LANG = 'en';
