Begin upgrade to django 1.7.

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,14 +36,14 @@
         </a>
 		<ul id="navbar">
 			<li><a {% if currentpage == "home" %}id="currentpage"{% endif %}
-                   href="{% url home.views.index %}">Home</a></li>
+                   href="{% url 'home.views.index' %}">Home</a></li>
 			<li><a {% if currentpage == "products" %}
                      id="currentpage"
                    {% endif %}
-                   href="{% url products.views.index %}">Products &amp; Services</a></li>
+                   href="{% url 'products.views.index' %}">Products &amp; Services</a></li>
 			<li><a {% if currentpage == "about-us" %}id="currentpage"{% endif %}
-                   href="{% url home.views.about_us %}">About Us</a></li>
-			
+                   href="{% url 'home.views.about_us' %}">About Us</a></li>
+
 		</ul>
       {% endblock header %}
 	</div>
@@ -53,11 +53,11 @@
 	<div id="footer">
 	  {% block footer %}
       <ul id="bottomnav">
-		<li><a href="{% url home.views.index %}">Home</a></li>
+		<li><a href="{% url 'home.views.index' %}">Home</a></li>
 		<li>|</li>
-		<li><a href="{% url products.views.index %}">Products &amp; Services</a></li>
+		<li><a href="{% url 'products.views.index' %}">Products &amp; Services</a></li>
 		<li>|</li>
-		<li><a href="{% url home.views.about_us %}">About Us</a></li>
+		<li><a href="{% url 'home.views.about_us' %}">About Us</a></li>
 	  </ul>
 	  <p>&#169;2011 RTO Electronics. Designed by Robert and Steven Oxley.</p>
 	  <p>valid xhtml. valid css. all rights reserved.</p>
