--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -17,29 +17,29 @@
 	<li>
 	  <a href="/products/repairs/">Repairs</a>
 	</li>
-  </ul>		
+  </ul>
 </div>
 <div id="items">
-  
+
   {% if categories.USED_EQUIPMENT %}
-  <h1><a href="{% url products.views.product_list 'used_equipment' %}">Used Equipment</a></h1>
+  <h1><a href="{% url 'products.views.product_list' 'used_equipment' %}">Used Equipment</a></h1>
   {% for unit in categories.USED_EQUIPMENT %}
   {% include 'products/product_list_item.html' with product=unit placeholder='/static/images/usedplace.png' %}
   {% endfor %}
   {% endif %}
-  
+
   {% if categories.MANUALS %}
   <h1>
-    <a href="{% url products.views.product_list 'manuals' %}">Manuals</a>
+    <a href="{% url 'products.views.product_list' 'manuals' %}">Manuals</a>
   </h1>
   {% for manual in categories.MANUALS %}
   {% include 'products/product_list_item.html' with product=manual placeholder='/static/images/manualplace.png' %}
   {% endfor %}
   {% endif %}
-  
+
   {% if categories.PARTS %}
   <h1>
-    <a href="{% url products.views.product_list 'parts' %}">Parts</a>
+    <a href="{% url 'products.views.product_list' 'parts' %}">Parts</a>
   </h1>
   {% for part in categories.PARTS %}
   {% include 'products/product_list_item.html' with product=part placeholder='/static/images/partplace.png' %}
@@ -48,7 +48,7 @@
 
   {% if categories.ACCESSORIES %}
   <h1>
-    <a href="{% url products.views.product_list 'accessories' %}">
+    <a href="{% url 'products.views.product_list' 'accessories' %}">
       Accessories</a>
   </h1>
   {% for accessory in categories.ACCESSORIES %}
@@ -58,13 +58,13 @@
 
   {% if categories.REPAIRS %}
   <h1>
-    <a href="{% url products.views.product_list 'repairs' %}">
+    <a href="{% url 'products.views.product_list' 'repairs' %}">
       Repairs</a>
   </h1>
   {% for repair in categories.REPAIRS %}
   {% include 'products/product_list_item.html' with product=repair placeholder='/static/images/repairplace.png' %}
   {% endfor %}
   {% endif %}
-  
+
 </div>
 {% endblock content %}
