--- a/templates/home/about_rto.html
+++ b/templates/home/about_rto.html
@@ -8,10 +8,10 @@
   <div class="org">RTO Electronics</div>
   <a class="email" href="mailto:hamtech@rtoham.com">hamtech@rtoham.com</a>
   <div class="adr">
-	<div class="street-address">601 E. First St.</div>
-	<span class="locality">Calexico</span>, 
-	<span class="region">CA</span>, 
-	<span class="postal-code">92231</span>
+	<div class="street-address">796 Grayson Road</div>
+	<span class="locality">Pleasant Hill</span>,
+	<span class="region">CA</span>,
+	<span class="postal-code">94523</span>
 	<span class="country-name">United States</span>
   </div>
   <div class="tel">269.468.7780</div>
