Actually update about us page.

--- a/templates/home/about_rto.html
+++ b/templates/home/about_rto.html
@@ -1,18 +1,18 @@
 <div id="hcard-Ronald-T.-Oxley" class="vcard">
-  <img src="http://a4.sphotos.ak.fbcdn.net/hphotos-ak-ash4/226417_1017951366209_1147870502_30057817_676_n.jpg" alt="photo of Ronald" class="photo"/>
-  <a class="url" href="http://www.rtoham.com">
-	<span class="given-name">Ronald</span>
-	<span class="additional-name">T.</span>
-	<span class="family-name">Oxley</span>
-  </a>
-  <div class="org">RTO Electronics</div>
-  <a class="email" href="mailto:hamtech@rtoham.com">hamtech@rtoham.com</a>
-  <div class="adr">
-	<div class="street-address">796 Grayson Road</div>
-	<span class="locality">Pleasant Hill</span>,
-	<span class="region">CA</span>,
-	<span class="postal-code">94523</span>
-	<span class="country-name">United States</span>
-  </div>
-  <div class="tel">269.468.7780</div>
+    <img src="https://scontent.xx.fbcdn.net/v/t1.0-9/318077_3529995605745_554614988_n.jpg?oh=b167b9332984a039e5f25299864117bb&oe=5919058D" alt="photo of Ronald" class="photo"/>
+    <a class="url" href="http://www.rtoham.com">
+        <span class="given-name">Ronald</span>
+        <span class="additional-name">T.</span>
+        <span class="family-name">Oxley</span>
+    </a>
+    <div class="org">RTO Electronics</div>
+    <a class="email" href="mailto:hamtech@rtoham.com">hamtech@rtoham.com</a>
+    <div class="adr">
+        <div class="street-address">7280 Territorial Road</div>
+        <span class="locality">Benton Harbor</span>,
+        <span class="region">MI</span>
+        <span class="postal-code">49022</span>
+        <span class="country-name">United States</span>
+    </div>
+    <div class="tel">269.468.7780</div>
 </div>
