--- a/templates/home/about_us.html
+++ b/templates/home/about_us.html
@@ -3,7 +3,7 @@
 <div id="about">
 {% include 'home/about_rto.html' %}
 
-<p>	Formerly located in Benton Harbor, Michigan where the Heathkits were made,  RTO Electronics is owned and operated by Ron Oxley, WM8Z.  We have been servicing Heathkit amateur radio equipment here at RTO since 1990 when Ron left the Heath Company after 12 years in the service department.  While we specialize in repairing the Heathkit ham gear we can also service other brands.  We also stock many of the repair parts needed to service the Heathkits and we can supply  many of the original Heathkit manuals for ham gear.</p>
+<p>Located in Benton Harbor, Michigan where the Heathkits were made,  RTO Electronics is owned and operated by Ron Oxley, WM8Z.  We have been servicing Heathkit amateur radio equipment here at RTO since 1990 when Ron left the Heath Company after 12 years in the service department.  While we specialize in repairing the Heathkit ham gear we can also service other brands.  We also stock many of the repair parts needed to service the Heathkits and we can supply  many of the original Heathkit manuals for ham gear.</p>
 </div>
 {% for article in articles %}
 {% include 'home/article.html' with article=article %}
